manifests/matrix-synapse/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  namespace: matrix
spec:
  ingressClassName: nginx
  rules:
    - host: matrix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
